# game-of-life

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.h  main.cpp
src/renderer/: drawlist.cpp  drawlist.h  renderer.cpp  renderer.h
src/utils/: console.cpp  console.h  keyboard.cpp  keyboard.h
