cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME "game-of-life")
set(PROJECT_VERSION 1.0)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

project(${PROJECT_NAME} VERSION ${PROJECT_VERSION})
add_executable(${PROJECT_NAME})

file(GLOB_RECURSE PROJECT_HEADERS "src/*.h")
file(GLOB_RECURSE PROJECT_SOURCES "src/*.cpp")

target_sources(${PROJECT_NAME} PRIVATE
   ${PROJECT_HEADERS}
   ${PROJECT_SOURCES}
)